diff java version fixes